@@ -15,6 +15,7 @@ systemd System and Service Manager
     - use light red color instead of highlight red;
     - use light green color instead of highlight green;
     - use light blue color instead of highlight blue;
+    - use light yellow color instead of highlight yellow;
  * change ansi color status messages for jobs in progress state;
  * remove gcrypt support;
  * remove python support;
